--- a/resources/lang/es_ES.xml
+++ b/resources/lang/es_ES.xml
@@ -23,7 +23,7 @@
     <translation key="choose_song_warning">Por favor, seleccione una canción.</translation>
     
     <!-- Music player functions -->
-    <translation key="play_button_text">Reproducir</translation>
+    <translation key="play_button_text">▶ Reproducir</translation>
     <translation key="paused_button_text">Pausado</translation>
     <translation key="stopped_button_text">Detenido</translation>
     <translation key="key_press">Presionar tecla</translation>
