--- a/resources/lang/nl_NL.xml
+++ b/resources/lang/nl_NL.xml
@@ -23,7 +23,7 @@
     <translation key="choose_song_warning">Kies een nummer.</translation>
     
     <!-- Music player functions -->
-    <translation key="play_button_text">Afspelen</translation>
+    <translation key="play_button_text">▶ Afspelen</translation>
     <translation key="paused_button_text">Geplaatst</translation>
     <translation key="stopped_button_text">Gestopt</translation>
     <translation key="key_press">Toets indrukken</translation>
