--- a/resources/lang/pl_PL.xml
+++ b/resources/lang/pl_PL.xml
@@ -23,7 +23,7 @@
     <translation key="choose_song_warning">Proszę wybrać piosenkę.</translation>
     
     <!-- Music player functions -->
-    <translation key="play_button_text">Odtwarzaj</translation>
+    <translation key="play_button_text">▶ Odtwarzaj</translation>
     <translation key="paused_button_text">Wstrzymane</translation>
     <translation key="stopped_button_text">Zatrzymane</translation>
     <translation key="key_press">Naciśnij klawisz</translation>
