--- a/resources/lang/it_IT.xml
+++ b/resources/lang/it_IT.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <translations>
-    <!-- Messaggi generali di errore e successo -->
+    <!-- Messaggi di errore e successo generali -->
     <translation key="error_loading_translations">Errore nel caricamento delle traduzioni: {0}</translation>
+    <translation key="lang_config_not_found">Configurazione della lingua non trovata</translation>
     <translation key="language_not_found">Lingua non trovata</translation>
     <translation key="file_not_found">File non trovato</translation>
     <translation key="unknown_file_format">Formato file sconosciuto</translation>
@@ -9,40 +10,37 @@
     <translation key="error_title">Errore</translation>
     <translation key="language_saved">Lingua salvata</translation>
     <translation key="missing_translations_file">File di traduzione mancante per {0}</translation>
-    <translation key="file_not_found_error">File non trovato: {0}</translation>
     
-    <!-- GUI: Finestri e bottoni -->
-    <translation key="language_window_title">Selezione della lingua</translation>
+    <!-- GUI: Finestre e pulsanti -->
+    <translation key="language_window_title">Selezione lingua</translation>
     <translation key="select_language">Seleziona lingua:</translation>
     <translation key="save_button_text">Salva</translation>
-    <translation key="info_title">Informazione</translation>
+    <translation key="info_title">Informazioni</translation>
     <translation key="no_song_selected">Nessuna canzone selezionata</translation>
     <translation key="file_select_title">Seleziona canzone</translation>
-    <translation key="supported_formats">Formati supportati</translation>
     <translation key="warning_title">Avviso</translation>
     <translation key="choose_song_warning">Seleziona una canzone prima di procedere.</translation>
+    <translation key="select_valid_file">Seleziona un file valido!</translation>
+    <translation key="file_dialog_title">Seleziona un file</translation>
+    <translation key="select_button_text">Seleziona</translation>
     
     <!-- Funzioni del lettore musicale -->
     <translation key="play_button_text">▶ Riproduci</translation>
-    <translation key="paused_button_text">Pausa</translation>
-    <translation key="stopped_button_text">Stop</translation>
-    <translation key="key_press">Premere tasto</translation>
+    <translation key="key_press">Premi tasto</translation>
     <translation key="enabled">Abilitato</translation>
     <translation key="disabled">Disabilitato</translation>
-    <translation key="duration">Durata del tasto premuto</translation>
+    <translation key="duration">Durata della pressione del tasto</translation>
     <translation key="key_recognition_error">Errore nel riconoscimento del tasto</translation>
     
     <!-- Messaggi di errore durante la riproduzione -->
-    <translation key="play_error_message">Errore durante la riproduzione della musica</translation>
-    <translation key="missing_key_songNotes">Dati della canzone mancanti (Key: songNotes)</translation>
-    <translation key="song_not_found">Canzone non trovata</translation>
+    <translation key="play_error_message">Errore nella riproduzione della musica</translation>
+    <translation key="missing_key_songNotes">Dati della canzone mancanti (Chiave: songNotes)</translation>
     
     <!-- Funzioni delle finestre -->
     <translation key="sky_window_not_found">Finestra Sky non trovata</translation>
-    <translation key="window_focus_error">Impossibile mettere la finestra a fuoco</translation>
+    <translation key="window_focus_error">Impossibile portare la finestra in primo piano</translation>
     
     <!-- Altre opzioni di testo -->
     <translation key="preset">Preset</translation>
     <translation key="project_title">Progetto Lyrica</translation>
-    
 </translations>
