--- a/resources/lang/ar_AR.xml
+++ b/resources/lang/ar_AR.xml
@@ -1,48 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <translations>
-    <!-- General error and success messages -->
-    <translation key="error_loading_translations">خطأ في تحميل الترجمات</translation>
-    <translation key="language_not_found">اللغة غير موجودة</translation>
+    <!-- Allgemeine Fehler und Erfolgsmeldungen -->
+    <translation key="error_loading_translations">خطأ في تحميل الترجمات: {0}</translation>
+    <translation key="lang_config_not_found">خطأ في تحميل تكوين اللغة</translation>
+    <translation key="language_not_found">تعذر العثور على اللغة</translation>
     <translation key="file_not_found">الملف غير موجود</translation>
     <translation key="unknown_file_format">تنسيق الملف غير معروف</translation>
     <translation key="error_loading_languages">خطأ في تحميل اللغات المتاحة</translation>
     <translation key="error_title">خطأ</translation>
     <translation key="language_saved">تم حفظ اللغة</translation>
-    <translation key="missing_translations_file">ملف الترجمة مفقود لـ {0}</translation>
-    <translation key="file_not_found_error">ملف غير موجود: {0}</translation>
+    <translation key="missing_translations_file">ملف الترجمات مفقود لـ {0}</translation>
     
-    <!-- GUI: Windows and Buttons -->
+    <!-- GUI: Fenster und Buttons -->
     <translation key="language_window_title">اختيار اللغة</translation>
-    <translation key="select_language">اختر لغة:</translation>
+    <translation key="select_language">اختار اللغة:</translation>
     <translation key="save_button_text">حفظ</translation>
     <translation key="info_title">معلومات</translation>
     <translation key="no_song_selected">لم يتم اختيار أغنية</translation>
-    <translation key="file_select_title">اختر أغنية</translation>
-    <translation key="supported_formats">الصيغ المدعومة</translation>
+    <translation key="file_select_title">اختيار أغنية</translation>
     <translation key="warning_title">تحذير</translation>
-    <translation key="choose_song_warning">يرجى اختيار أغنية.</translation>
+    <translation key="choose_song_warning">يرجى اختيار أغنية قبل المتابعة.</translation>
+    <translation key="select_valid_file">يرجى اختيار ملف صالح!</translation>
+    <translation key="file_dialog_title">اختيار ملف</translation>
+    <translation key="select_button_text">اختيار</translation>
     
-    <!-- Music player functions -->
-    <translation key="play_button_text">تشغيل</translation>
-    <translation key="paused_button_text">موقوف</translation>
-    <translation key="stopped_button_text">موقف</translation>
-    <translation key="key_press">اضغط على المفتاح</translation>
+    <!-- Musikplayer Funktionen -->
+    <translation key="play_button_text">▶ تشغيل</translation>
+    <translation key="key_press">ضغط المفتاح</translation>
     <translation key="enabled">مفعل</translation>
-    <translation key="disabled">غير مفعل</translation>
-    <translation key="duration">مدة الضغط على المفتاح</translation>
+    <translation key="disabled">معطل</translation>
+    <translation key="duration">مدة ضغط المفتاح</translation>
     <translation key="key_recognition_error">خطأ في التعرف على المفتاح</translation>
     
-    <!-- Errors during playback -->
-    <translation key="play_error_message">حدث خطأ أثناء تشغيل الموسيقى</translation>
-    <translation key="missing_key_songNotes">المفتاح مفقود في بيانات الأغنية (المفتاح: songNotes)</translation>
-    <translation key="song_not_found">الأغنية غير موجودة</translation>
+    <!-- Fehlermeldungen beim Abspielen -->
+    <translation key="play_error_message">خطأ في تشغيل الموسيقى</translation>
+    <translation key="missing_key_songNotes">بيانات الأغنية مفقودة (المفتاح: songNotes)</translation>
     
-    <!-- Window functions -->
-    <translation key="sky_window_not_found">نافذة Sky غير موجودة</translation>
-    <translation key="window_focus_error">خطأ في تحديد النافذة في المقدمة</translation>
+    <!-- Fensterfunktionen -->
+    <translation key="sky_window_not_found">نافذة سكاي غير موجودة</translation>
+    <translation key="window_focus_error">تعذر تركيز النافذة</translation>
     
-    <!-- Additional text options -->
-    <translation key="preset">إعداد مسبق</translation>
-    <translation key="project_title">Project Lyrica</translation>
-    
+    <!-- Weitere Textoptionen -->
+    <translation key="preset">الإعدادات المسبقة</translation>
+    <translation key="project_title">مشروع ليريكا</translation>
 </translations>
