--- a/resources/lang/da_DK.xml
+++ b/resources/lang/da_DK.xml
@@ -1,48 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <translations>
-    <!-- General error and success messages -->
-    <translation key="error_loading_translations">Fejl ved indlæsning af oversættelser</translation>
-    <translation key="language_not_found">Sprog ikke fundet</translation>
+    <!-- Allgemeine Fehler und Erfolgsmeldungen -->
+    <translation key="error_loading_translations">Fejl ved indlæsning af oversættelser: {0}</translation>
+    <translation key="lang_config_not_found">Fejl ved indlæsning af sprogkonfiguration</translation>
+    <translation key="language_not_found">Sprog kunne ikke findes</translation>
     <translation key="file_not_found">Fil ikke fundet</translation>
     <translation key="unknown_file_format">Ukendt filformat</translation>
     <translation key="error_loading_languages">Fejl ved indlæsning af tilgængelige sprog</translation>
     <translation key="error_title">Fejl</translation>
-    <translation key="language_saved">Sprog gemt</translation>
+    <translation key="language_saved">Sprog er gemt</translation>
     <translation key="missing_translations_file">Manglende oversættelsesfil for {0}</translation>
-    <translation key="file_not_found_error">Fil ikke fundet: {0}</translation>
     
-    <!-- GUI: Windows and Buttons -->
+    <!-- GUI: Fenster und Buttons -->
     <translation key="language_window_title">Vælg sprog</translation>
     <translation key="select_language">Vælg sprog:</translation>
     <translation key="save_button_text">Gem</translation>
     <translation key="info_title">Information</translation>
     <translation key="no_song_selected">Ingen sang valgt</translation>
     <translation key="file_select_title">Vælg sang</translation>
-    <translation key="supported_formats">Understøttede formater</translation>
     <translation key="warning_title">Advarsel</translation>
-    <translation key="choose_song_warning">Vælg venligst en sang.</translation>
+    <translation key="choose_song_warning">Vælg venligst en sang før du fortsætter.</translation>
+    <translation key="select_valid_file">Vælg venligst en gyldig fil!</translation>
+    <translation key="file_dialog_title">Vælg en fil</translation>
+    <translation key="select_button_text">Vælg</translation>
     
-    <!-- Music player functions -->
+    <!-- Musikplayer Funktionen -->
     <translation key="play_button_text">▶ Afspil</translation>
-    <translation key="paused_button_text">Pauset</translation>
-    <translation key="stopped_button_text">Stoppet</translation>
     <translation key="key_press">Tastetryk</translation>
     <translation key="enabled">Aktiveret</translation>
     <translation key="disabled">Deaktiveret</translation>
     <translation key="duration">Varighed af tastetryk</translation>
-    <translation key="key_recognition_error">Fejl i tastetryksgenkendelse</translation>
+    <translation key="key_recognition_error">Fejl ved tastetrykgenkendelse</translation>
     
-    <!-- Errors during playback -->
+    <!-- Fehlermeldungen beim Abspielen -->
     <translation key="play_error_message">Fejl ved afspilning af musik</translation>
-    <translation key="missing_key_songNotes">Sangdata mangler nøglen 'songNotes'</translation>
-    <translation key="song_not_found">Sang ikke fundet</translation>
+    <translation key="missing_key_songNotes">Sangdata mangler (Key: songNotes)</translation>
     
-    <!-- Window functions -->
-    <translation key="sky_window_not_found">Sky vindue ikke fundet</translation>
-    <translation key="window_focus_error">Fejl ved fokusering af vindue</translation>
+    <!-- Fensterfunktionen -->
+    <translation key="sky_window_not_found">Sky-vindue ikke fundet</translation>
+    <translation key="window_focus_error">Kan ikke sætte fokus på vinduet</translation>
     
-    <!-- Additional text options -->
-    <translation key="preset">Forudindstilling</translation>
-    <translation key="project_title">Project Lyrica</translation>
-    
+    <!-- Weitere Textoptionen -->
+    <translation key="preset">Præindstilling</translation>
+    <translation key="project_title">Projekt Lyrica</translation>
 </translations>
