--- a/resources/lang/ko_KR.xml
+++ b/resources/lang/ko_KR.xml
@@ -1,48 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <translations>
-    <!-- General error and success messages -->
-    <translation key="error_loading_translations">번역 로드 오류</translation>
-    <translation key="language_not_found">언어를 찾을 수 없음</translation>
+    <!-- Allgemeine Fehler und Erfolgsmeldungen -->
+    <translation key="error_loading_translations">번역 로딩 오류: {0}</translation>
+    <translation key="lang_config_not_found">언어 설정을 찾을 수 없습니다</translation>
+    <translation key="language_not_found">언어를 찾을 수 없습니다</translation>
     <translation key="file_not_found">파일을 찾을 수 없습니다</translation>
     <translation key="unknown_file_format">알 수 없는 파일 형식</translation>
-    <translation key="error_loading_languages">사용 가능한 언어를 로드하는 데 오류가 발생했습니다</translation>
+    <translation key="error_loading_languages">사용 가능한 언어를 로드하는 오류</translation>
     <translation key="error_title">오류</translation>
     <translation key="language_saved">언어가 저장되었습니다</translation>
     <translation key="missing_translations_file">{0}에 대한 번역 파일이 없습니다</translation>
-    <translation key="file_not_found_error">파일을 찾을 수 없습니다: {0}</translation>
     
-    <!-- GUI: Windows and Buttons -->
+    <!-- GUI: Fenster und Buttons -->
     <translation key="language_window_title">언어 선택</translation>
     <translation key="select_language">언어 선택:</translation>
     <translation key="save_button_text">저장</translation>
     <translation key="info_title">정보</translation>
-    <translation key="no_song_selected">선택된 노래 없음</translation>
+    <translation key="no_song_selected">노래가 선택되지 않았습니다</translation>
     <translation key="file_select_title">노래 선택</translation>
-    <translation key="supported_formats">지원되는 형식</translation>
     <translation key="warning_title">경고</translation>
-    <translation key="choose_song_warning">노래를 선택하십시오.</translation>
+    <translation key="choose_song_warning">계속 진행하기 전에 노래를 선택해 주세요.</translation>
+    <translation key="select_valid_file">유효한 파일을 선택해 주세요!</translation>
+    <translation key="file_dialog_title">파일 선택</translation>
+    <translation key="select_button_text">선택</translation>
     
-    <!-- Music player functions -->
+    <!-- Musikplayer Funktionen -->
     <translation key="play_button_text">▶ 재생</translation>
-    <translation key="paused_button_text">일시 정지됨</translation>
-    <translation key="stopped_button_text">중지됨</translation>
-    <translation key="key_press">키 입력</translation>
+    <translation key="key_press">키 누르기</translation>
     <translation key="enabled">활성화됨</translation>
     <translation key="disabled">비활성화됨</translation>
-    <translation key="duration">키 입력 지속 시간</translation>
+    <translation key="duration">키 누른 시간</translation>
     <translation key="key_recognition_error">키 인식 오류</translation>
     
-    <!-- Errors during playback -->
-    <translation key="play_error_message">음악 재생 중 오류 발생</translation>
-    <translation key="missing_key_songNotes">노래 데이터 누락 (key: songNotes)</translation>
-    <translation key="song_not_found">노래를 찾을 수 없습니다</translation>
+    <!-- Fehlermeldungen beim Abspielen -->
+    <translation key="play_error_message">음악 재생 오류</translation>
+    <translation key="missing_key_songNotes">곡 데이터 누락 (키: songNotes)</translation>
     
-    <!-- Window functions -->
+    <!-- Fensterfunktionen -->
     <translation key="sky_window_not_found">Sky 창을 찾을 수 없습니다</translation>
-    <translation key="window_focus_error">창을 전경으로 설정하는 데 오류가 발생했습니다</translation>
+    <translation key="window_focus_error">창을 포커스할 수 없습니다</translation>
     
-    <!-- Additional text options -->
+    <!-- Weitere Textoptionen -->
     <translation key="preset">프리셋</translation>
-    <translation key="project_title">Project Lyrica</translation>
-    
+    <translation key="project_title">프로젝트 Lyrica</translation>
 </translations>
