--- a/resources/lang/pt_PT.xml
+++ b/resources/lang/pt_PT.xml
@@ -1,48 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <translations>
-    <!-- General error and success messages -->
-    <translation key="error_loading_translations">Erro ao carregar traduções</translation>
+    <!-- Allgemeine Fehler und Erfolgsmeldungen -->
+    <translation key="error_loading_translations">Erro ao carregar as traduções: {0}</translation>
+    <translation key="lang_config_not_found">Erro: configuração de idioma não encontrada</translation>
     <translation key="language_not_found">Idioma não encontrado</translation>
     <translation key="file_not_found">Arquivo não encontrado</translation>
     <translation key="unknown_file_format">Formato de arquivo desconhecido</translation>
     <translation key="error_loading_languages">Erro ao carregar idiomas disponíveis</translation>
     <translation key="error_title">Erro</translation>
-    <translation key="language_saved">Idioma salvo</translation>
-    <translation key="missing_translations_file">Arquivo de tradução ausente para {0}</translation>
-    <translation key="file_not_found_error">Arquivo não encontrado: {0}</translation>
+    <translation key="language_saved">Idioma salvo com sucesso</translation>
+    <translation key="missing_translations_file">Ficheiro de traduções ausente para {0}</translation>
     
-    <!-- GUI: Windows and Buttons -->
-    <translation key="language_window_title">Seleção de idioma</translation>
-    <translation key="select_language">Escolha o idioma:</translation>
+    <!-- GUI: Fenster und Buttons -->
+    <translation key="language_window_title">Seleção de Idioma</translation>
+    <translation key="select_language">Selecione o idioma:</translation>
     <translation key="save_button_text">Salvar</translation>
     <translation key="info_title">Informação</translation>
     <translation key="no_song_selected">Nenhuma música selecionada</translation>
     <translation key="file_select_title">Selecionar música</translation>
-    <translation key="supported_formats">Formatos suportados</translation>
     <translation key="warning_title">Aviso</translation>
-    <translation key="choose_song_warning">Por favor, selecione uma música.</translation>
+    <translation key="choose_song_warning">Por favor, selecione uma música antes de continuar.</translation>
+    <translation key="select_valid_file">Por favor, selecione um arquivo válido!</translation>
+    <translation key="file_dialog_title">Escolha um arquivo</translation>
+    <translation key="select_button_text">Selecionar</translation>
     
-    <!-- Music player functions -->
+    <!-- Musikplayer Funktionen -->
     <translation key="play_button_text">▶ Reproduzir</translation>
-    <translation key="paused_button_text">Pausado</translation>
-    <translation key="stopped_button_text">Parar</translation>
     <translation key="key_press">Pressionar tecla</translation>
     <translation key="enabled">Ativado</translation>
     <translation key="disabled">Desativado</translation>
-    <translation key="duration">Duração do pressionamento</translation>
-    <translation key="key_recognition_error">Erro no reconhecimento da tecla</translation>
+    <translation key="duration">Duração da pressão da tecla</translation>
+    <translation key="key_recognition_error">Erro ao reconhecer a tecla</translation>
     
-    <!-- Errors during playback -->
+    <!-- Fehlermeldungen beim Abspielen -->
     <translation key="play_error_message">Erro ao reproduzir a música</translation>
-    <translation key="missing_key_songNotes">Faltam dados da música (chave: songNotes)</translation>
-    <translation key="song_not_found">Música não encontrada</translation>
+    <translation key="missing_key_songNotes">Dados da música ausentes (Chave: songNotes)</translation>
     
-    <!-- Window functions -->
+    <!-- Fensterfunktionen -->
     <translation key="sky_window_not_found">Janela Sky não encontrada</translation>
-    <translation key="window_focus_error">Erro ao focar a janela</translation>
+    <translation key="window_focus_error">Não foi possível focar a janela</translation>
     
-    <!-- Additional text options -->
+    <!-- Weitere Textoptionen -->
     <translation key="preset">Preset</translation>
-    <translation key="project_title">Project Lyrica</translation>
-    
+    <translation key="project_title">Projeto Lyrica</translation>
 </translations>
