--- a/resources/lang/ru_RU.xml
+++ b/resources/lang/ru_RU.xml
@@ -1,48 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <translations>
-    <!-- General error and success messages -->
-    <translation key="error_loading_translations">Ошибка загрузки переводов</translation>
+    <!-- Allgemeine Fehler und Erfolgsmeldungen -->
+    <translation key="error_loading_translations">Ошибка загрузки переводов: {0}</translation>
+    <translation key="lang_config_not_found">Ошибка: не найдена конфигурация языка</translation>
     <translation key="language_not_found">Язык не найден</translation>
     <translation key="file_not_found">Файл не найден</translation>
     <translation key="unknown_file_format">Неизвестный формат файла</translation>
     <translation key="error_loading_languages">Ошибка загрузки доступных языков</translation>
     <translation key="error_title">Ошибка</translation>
-    <translation key="language_saved">Язык сохранен</translation>
-    <translation key="missing_translations_file">Отсутствует файл перевода для {0}</translation>
-    <translation key="file_not_found_error">Файл не найден: {0}</translation>
+    <translation key="language_saved">Язык был сохранен</translation>
+    <translation key="missing_translations_file">Отсутствует файл переводов для {0}</translation>
     
-    <!-- GUI: Windows and Buttons -->
+    <!-- GUI: Fenster und Buttons -->
     <translation key="language_window_title">Выбор языка</translation>
     <translation key="select_language">Выберите язык:</translation>
     <translation key="save_button_text">Сохранить</translation>
     <translation key="info_title">Информация</translation>
-    <translation key="no_song_selected">Не выбрана песня</translation>
+    <translation key="no_song_selected">Песня не выбрана</translation>
     <translation key="file_select_title">Выбор песни</translation>
-    <translation key="supported_formats">Поддерживаемые форматы</translation>
     <translation key="warning_title">Предупреждение</translation>
-    <translation key="choose_song_warning">Пожалуйста, выберите песню.</translation>
+    <translation key="choose_song_warning">Пожалуйста, выберите песню перед продолжением.</translation>
+    <translation key="select_valid_file">Пожалуйста, выберите действительный файл!</translation>
+    <translation key="file_dialog_title">Выберите файл</translation>
+    <translation key="select_button_text">Выбрать</translation>
     
-    <!-- Music player functions -->
-    <translation key="play_button_text">▶ Воспроизведение</translation>
-    <translation key="paused_button_text">Пауза</translation>
-    <translation key="stopped_button_text">Остановить</translation>
+    <!-- Musikplayer Funktionen -->
+    <translation key="play_button_text">▶ Воспроизвести</translation>
     <translation key="key_press">Нажатие клавиши</translation>
     <translation key="enabled">Включено</translation>
     <translation key="disabled">Выключено</translation>
     <translation key="duration">Длительность нажатия клавиши</translation>
     <translation key="key_recognition_error">Ошибка распознавания клавиши</translation>
     
-    <!-- Errors during playback -->
+    <!-- Fehlermeldungen beim Abspielen -->
     <translation key="play_error_message">Ошибка воспроизведения музыки</translation>
-    <translation key="missing_key_songNotes">Отсутствуют данные песни (ключ: songNotes)</translation>
-    <translation key="song_not_found">Песня не найдена</translation>
+    <translation key="missing_key_songNotes">Отсутствуют данные песни (Ключ: songNotes)</translation>
     
-    <!-- Window functions -->
+    <!-- Fensterfunktionen -->
     <translation key="sky_window_not_found">Окно Sky не найдено</translation>
-    <translation key="window_focus_error">Ошибка фокуса окна</translation>
+    <translation key="window_focus_error">Не удалось установить фокус на окно</translation>
     
-    <!-- Additional text options -->
+    <!-- Weitere Textoptionen -->
     <translation key="preset">Пресет</translation>
-    <translation key="project_title">Project Lyrica</translation>
-    
+    <translation key="project_title">Проект Lyrica</translation>
 </translations>
