--- a/resources/lang/zh_ZH.xml
+++ b/resources/lang/zh_ZH.xml
@@ -1,48 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <translations>
-    <!-- General error and success messages -->
-    <translation key="error_loading_translations">加载翻译时出错</translation>
-    <translation key="language_not_found">未找到语言</translation>
+    <!-- Allgemeine Fehler und Erfolgsmeldungen -->
+    <translation key="error_loading_translations">加载翻译时出错：{0}</translation>
+    <translation key="lang_config_not_found">语言配置加载失败</translation>
+    <translation key="language_not_found">找不到语言</translation>
     <translation key="file_not_found">文件未找到</translation>
-    <translation key="unknown_file_format">未知文件格式</translation>
+    <translation key="unknown_file_format">未知的文件格式</translation>
     <translation key="error_loading_languages">加载可用语言时出错</translation>
     <translation key="error_title">错误</translation>
     <translation key="language_saved">语言已保存</translation>
-    <translation key="missing_translations_file">缺少 {0} 的翻译文件</translation>
-    <translation key="file_not_found_error">文件未找到: {0}</translation>
+    <translation key="missing_translations_file">缺少翻译文件：{0}</translation>
     
-    <!-- GUI: Windows and Buttons -->
+    <!-- GUI: Fenster und Buttons -->
     <translation key="language_window_title">选择语言</translation>
-    <translation key="select_language">选择语言:</translation>
+    <translation key="select_language">选择语言：</translation>
     <translation key="save_button_text">保存</translation>
     <translation key="info_title">信息</translation>
     <translation key="no_song_selected">未选择歌曲</translation>
     <translation key="file_select_title">选择歌曲</translation>
-    <translation key="supported_formats">支持的格式</translation>
     <translation key="warning_title">警告</translation>
-    <translation key="choose_song_warning">请选择一首歌曲。</translation>
+    <translation key="choose_song_warning">请选择一首歌曲，然后继续。</translation>
+    <translation key="select_valid_file">请选择有效的文件！</translation>
+    <translation key="file_dialog_title">选择文件</translation>
+    <translation key="select_button_text">选择</translation>
     
-    <!-- Music player functions -->
+    <!-- Musikplayer Funktionen -->
     <translation key="play_button_text">▶ 播放</translation>
-    <translation key="paused_button_text">已暂停</translation>
-    <translation key="stopped_button_text">已停止</translation>
     <translation key="key_press">按键</translation>
     <translation key="enabled">启用</translation>
     <translation key="disabled">禁用</translation>
     <translation key="duration">按键持续时间</translation>
     <translation key="key_recognition_error">按键识别错误</translation>
     
-    <!-- Errors during playback -->
+    <!-- Fehlermeldungen beim Abspielen -->
     <translation key="play_error_message">播放音乐时出错</translation>
-    <translation key="missing_key_songNotes">歌曲数据中缺少关键字（songNotes）</translation>
-    <translation key="song_not_found">未找到歌曲</translation>
+    <translation key="missing_key_songNotes">缺少歌曲数据（键：songNotes）</translation>
     
-    <!-- Window functions -->
-    <translation key="sky_window_not_found">未找到Sky窗口</translation>
-    <translation key="window_focus_error">聚焦窗口时出错</translation>
+    <!-- Fensterfunktionen -->
+    <translation key="sky_window_not_found">未找到天空窗口</translation>
+    <translation key="window_focus_error">无法将窗口设置为焦点</translation>
     
-    <!-- Additional text options -->
+    <!-- Weitere Textoptionen -->
     <translation key="preset">预设</translation>
-    <translation key="project_title">Project Lyrica</translation>
-    
+    <translation key="project_title">Lyrica 项目</translation>
 </translations>
